fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,6 @@ a {
 @media screen and (max-width: 600px) {
   body {
     padding: 1.9rem 1.2rem;
-    overflow: scroll;
     overflow-x: hidden;
   }
   .hamburger {
